--- a/src/app/pages/settings/relays/relays.component.html
+++ b/src/app/pages/settings/relays/relays.component.html
@@ -261,9 +261,9 @@
     <mat-card-content>
       <p>Account Relays are used to publish your profile and events for others to discovery.</p>
       <p>
-        Account Relays is your Home. This is where your data is stored and persisted. It's where other
-        users retrieve your events from. Make sure you choose a relay that you trust and that is
-        reliable.
+        Account Relays is your Home. This is where your data is stored and persisted. It's where
+        other users retrieve your events from. Make sure you choose a relay that you trust and that
+        is reliable.
       </p>
       <p>
         You should normally not need more than four relays. You don't need to pick the most popular
