chore: comment out categories header in bookmarks component

--- a/src/app/pages/bookmarks/bookmarks.component.html
+++ b/src/app/pages/bookmarks/bookmarks.component.html
@@ -28,12 +28,12 @@
       </mat-form-field> -->
 
       <div class="categories-container">
-        <div class="categories-header">
+        <!-- <div class="categories-header">
           <h3>Categories</h3>
           <button mat-icon-button (click)="openManageCategories()" matTooltip="Manage Categories">
             <mat-icon>settings</mat-icon>
           </button>
-        </div>
+        </div> -->
         <div class="categories-list">
           @for (category of categories(); track category.id) {
             <div
