feat: Update tab label from 'Nostr Credentials' to 'Credentials' for consistency

--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -1,6 +1,6 @@
 <div class="content-medium">
   <mat-tab-group class="following-tabs">
-    <mat-tab class="following-tab" label="Nostr Credentials">
+    <mat-tab class="following-tab" label="Credentials">
       <div class="following-content">
         <h1>Your Nostr Credentials</h1>
 
