--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -12,7 +12,18 @@
       <h1 class="page-title" i18n="@@settings.title">Settings</h1>
       <mat-nav-list>
         @for (section of sections; track section.id) {
-          @if (section.authenticated && app.authenticated()) {
+          @if (section.premium) {
+            @if (accountState.premium()) {
+              <a
+                mat-list-item
+                [class.active]="activeSection() === section.id"
+                (click)="selectSection(section.id)"
+              >
+                <mat-icon matListItemIcon>{{ section.icon }}</mat-icon>
+                <span matListItemTitle>{{ section.title }}</span>
+              </a>
+            }
+          } @else if (section.authenticated && app.authenticated()) {
             <a
               mat-list-item
               [class.active]="activeSection() === section.id"
