feat: show event options for reposts

--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -30,6 +30,7 @@
             {{ item.event.created_at | ago }}
           </span>
         </span>
+        <app-event-menu [event]="item.event" class="note-footer-right"></app-event-menu>
       </mat-card-header>
       <mat-card-content>
         <mat-card appearance="outlined">
