--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -70,10 +70,11 @@
 .repost-header {
   font-style: italic;
   opacity: 0.7;
+  align-items: center;
 
   mat-icon {
     font-size: 18px;
-    line-height: 21px;
+    line-height: 26px;
   }
 }
 
