feat: update block user button text and add report user option in profile menu

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -46,7 +46,7 @@
   @if (event().pubkey !== accountState.pubkey()) {
   <button mat-menu-item (click)="accountState.mutePubkey(event().pubkey);">
     <mat-icon>block</mat-icon>
-    <span>Block</span>
+    <span>Block User</span>
   </button>
   }
 </mat-menu>
