feat: implement reporting functionality for users and content, including UI updates and service integration

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -39,7 +39,7 @@
     Publish Event
   </button>
   <mat-divider></mat-divider>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="reportContent()">
     <mat-icon>warning</mat-icon>
     Report Content
   </button>
