--- a/src/app/pages/settings/privacy-settings/privacy-settings.component.html
+++ b/src/app/pages/settings/privacy-settings/privacy-settings.component.html
@@ -36,7 +36,7 @@
   <mat-divider></mat-divider>
 
   <section class="mute-section">
-    <h3>Muted Accounts</h3>
+    <h3>Blocked Accounts</h3>
     <div class="muted-section">
       @if (mutedAccounts().length > 0) {
         <mat-list>
@@ -66,7 +66,7 @@
           }
         </mat-list>
       } @else {
-        <p class="empty-state">No muted accounts.</p>
+        <p class="empty-state">No blocked accounts.</p>
       }
     </div>
   </section>
